# competitor-bot

./: .gitignore  README.md  main.py  oldmain2.py  openai_unsure.py  pyproject.toml  scheduler.py  test_openai.py  verify_access.py
Fictional Company Data/Acme Corp/: Acme Notes.docx  Acme notes 2.docx  acme notes 3.docx
app/: main2.py  utils.py
app/models/requests/: openai.py
app/routes/: transfer.py
app/routes/openai/: openai.py  utils.py
app/services/: file_service.py  get_secret.py
app/services/aws/: __init__.py  aws.py  aws_files.py
app/services/google_service/: __init__.py  drive.py  google_service.py
app/services/openai/: assistant.py  file.py  mixin.py  openai_service.py  vector_store.py
app/services/slack/: __init__.py  slack.py
app/slack/: commands.py  views.py
app/slack/modals/: get_ai_insights_modal.py
app/slack/subcommands/ai/: ai.py
